@@ -1,3 +1,7 @@
+2008-11-26  Mike Krüger  <mkrueger@novell.com>
+
+	* Gui/CSharpAmbience.cs: fixed some ambience bugs.
+
 2008-11-25  Mike Krüger  <mkrueger@novell.com>
 
 	* Parser/CodeGenerator.cs: fixed 'Bug 434240 - Cannot explicitly
